@@ -1,17 +1,17 @@
 /* Copyright (c) 2007 Google Inc.
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*     http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*/
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
 //
 //  GDataFeedCalendarEvent.h
@@ -21,9 +21,7 @@
 
 @class GDataTimeZoneProperty;
 
-@interface GDataFeedCalendarEvent : GDataFeedEvent {
-}
-
+@interface GDataFeedCalendarEvent : GDataFeedEvent
 
 + (GDataFeedCalendarEvent *)calendarEventFeedWithXMLData:(NSData *)data;
 
@@ -35,5 +33,8 @@
 
 - (GDataTimeZoneProperty *)timeZoneName;
 - (void)setTimeZoneName:(GDataTimeZoneProperty *)val;
+
+- (NSNumber *)timesCleaned; // int
+- (void)setTimesCleaned:(NSNumber *)num;
 
 @end
